force-app/main/default/objects/Connection__c/Connection__c.object-meta.xml
<CustomObject>
    <description>Connecting Volunteer Hours and Service Delivery records</description>
    <label>Connection</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Connection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Connections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>