force-app/main/default/objects/Connection__c/fields/Parent_Connection__c.field-meta.xml
<CustomField>
    <fullName>Parent_Connection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Connection</label>
    <referenceTo>Connection__c</referenceTo>
    <relationshipLabel>Children Connections</relationshipLabel>
    <relationshipName>Connections</relationshipName>
    <type>Lookup</type>
</CustomField>