force-app/main/default/objects/Connection__c/fields/Service_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Service_Delivery__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Delivery</label>
    <referenceTo>pmdm__ServiceDelivery__c</referenceTo>
    <relationshipLabel>Connections</relationshipLabel>
    <relationshipName>Connections</relationshipName>
    <type>Lookup</type>
</CustomField>