force-app/main/default/objects/Connection__c/fields/Volunteer_Hours__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer Hours</label>
    <referenceTo>GW_Volunteers__Volunteer_Hours__c</referenceTo>
    <relationshipLabel>Connections</relationshipLabel>
    <relationshipName>Connections</relationshipName>
    <type>Lookup</type>
</CustomField>